as3/dj.output
Grammar

    0 $accept: pgm $end

    1 pgm: instlist ENDOFFILE

    2 instlist: class main

    3 class: class CLASS ID EXTENDS ID clexp
    4      | /* empty */

    5 clexp: LBRACE field RBRACE
    6      | LBRACE method RBRACE
    7      | LBRACE field method RBRACE
    8      | LBRACE RBRACE

    9 field: field NATTYPE ID SEMICOLON
   10      | field ID ID SEMICOLON
   11      | NATTYPE ID SEMICOLON
   12      | ID ID SEMICOLON

   13 method: method ID ID LPAREN pexp RPAREN LBRACE vbexp RBRACE
   14       | method NATTYPE ID LPAREN pexp RPAREN LBRACE vbexp RBRACE
   15       | ID ID LPAREN pexp RPAREN LBRACE vbexp RBRACE
   16       | NATTYPE ID LPAREN pexp RPAREN LBRACE vbexp RBRACE

   17 pexp: pexp NATTYPE ID
   18     | pexp NATTYPE ID COMMA
   19     | pexp ID ID
   20     | pexp ID ID COMMA
   21     | /* empty */

   22 main: MAIN LBRACE vbexp RBRACE

   23 vbexp: field exp SEMICOLON
   24      | vbexp exp SEMICOLON
   25      | exp SEMICOLON

   26 elist: elist exp SEMICOLON
   27      | exp SEMICOLON

   28 alist: alist COMMA exp
   29      | exp

   30 exp: NATLITERAL
   31    | exp PLUS exp
   32    | exp MINUS exp
   33    | exp TIMES exp
   34    | exp EQUALITY exp
   35    | exp LESS exp
   36    | NOT exp
   37    | exp AND exp
   38    | IF LPAREN exp RPAREN LBRACE elist RBRACE ELSE LBRACE elist RBRACE
   39    | WHILE LPAREN exp RPAREN LBRACE elist RBRACE
   40    | NEW ID LPAREN RPAREN
   41    | THIS
   42    | PRINTNAT LPAREN exp RPAREN
   43    | READNAT LPAREN RPAREN
   44    | ID
   45    | exp DOT ID
   46    | ID ASSIGN exp
   47    | exp DOT ID ASSIGN exp
   48    | ID LPAREN alist RPAREN
   49    | exp DOT ID LPAREN alist RPAREN
   50    | LPAREN exp RPAREN
   51    | NUL


Terminals, with rules where they appear

$end (0) 0
error (256)
MAIN (258) 22
CLASS (259) 3
EXTENDS (260) 3
NATTYPE (261) 9 11 14 16 17 18
IF (262) 38
ELSE (263) 38
WHILE (264) 39
PRINTNAT (265) 42
READNAT (266) 43
THIS (267) 41
NEW (268) 40
NUL (269) 51
NATLITERAL (270) 30
ID (271) 3 9 10 11 12 13 14 15 16 17 18 19 20 40 44 45 46 47 48 49
ASSIGN (272) 46 47
PLUS (273) 31
MINUS (274) 32
TIMES (275) 33
EQUALITY (276) 34
LESS (277) 35
AND (278) 37
NOT (279) 36
DOT (280) 45 47 49
SEMICOLON (281) 9 10 11 12 23 24 25 26 27
COMMA (282) 18 20 28
LBRACE (283) 5 6 7 8 13 14 15 16 22 38 39
RBRACE (284) 5 6 7 8 13 14 15 16 22 38 39
LPAREN (285) 13 14 15 16 38 39 40 42 43 48 49 50
RPAREN (286) 13 14 15 16 38 39 40 42 43 48 49 50
ENDOFFILE (287) 1


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
pgm (34)
    on left: 1, on right: 0
instlist (35)
    on left: 2, on right: 1
class (36)
    on left: 3 4, on right: 2 3
clexp (37)
    on left: 5 6 7 8, on right: 3
field (38)
    on left: 9 10 11 12, on right: 5 7 9 10 23
method (39)
    on left: 13 14 15 16, on right: 6 7 13 14
pexp (40)
    on left: 17 18 19 20 21, on right: 13 14 15 16 17 18 19 20
main (41)
    on left: 22, on right: 2
vbexp (42)
    on left: 23 24 25, on right: 13 14 15 16 22 24
elist (43)
    on left: 26 27, on right: 26 38 39
alist (44)
    on left: 28 29, on right: 28 48 49
exp (45)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51, on right: 23 24 25 26 27 28 29 31 32 33 34 35 36 37
    38 39 42 45 46 47 49 50


state 0

    0 $accept: . pgm $end

    $default  reduce using rule 4 (class)

    pgm       go to state 1
    instlist  go to state 2
    class     go to state 3


state 1

    0 $accept: pgm . $end

    $end  shift, and go to state 4


state 2

    1 pgm: instlist . ENDOFFILE

    ENDOFFILE  shift, and go to state 5


state 3

    2 instlist: class . main
    3 class: class . CLASS ID EXTENDS ID clexp

    MAIN   shift, and go to state 6
    CLASS  shift, and go to state 7

    main  go to state 8


state 4

    0 $accept: pgm $end .

    $default  accept


state 5

    1 pgm: instlist ENDOFFILE .

    $default  reduce using rule 1 (pgm)


state 6

   22 main: MAIN . LBRACE vbexp RBRACE

    LBRACE  shift, and go to state 9


state 7

    3 class: class CLASS . ID EXTENDS ID clexp

    ID  shift, and go to state 10


state 8

    2 instlist: class main .

    $default  reduce using rule 2 (instlist)


state 9

   22 main: MAIN LBRACE . vbexp RBRACE

    NATTYPE     shift, and go to state 11
    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 20
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    field  go to state 23
    vbexp  go to state 24
    exp    go to state 25


state 10

    3 class: class CLASS ID . EXTENDS ID clexp

    EXTENDS  shift, and go to state 26


state 11

   11 field: NATTYPE . ID SEMICOLON

    ID  shift, and go to state 27


state 12

   38 exp: IF . LPAREN exp RPAREN LBRACE elist RBRACE ELSE LBRACE elist RBRACE

    LPAREN  shift, and go to state 28


state 13

   39 exp: WHILE . LPAREN exp RPAREN LBRACE elist RBRACE

    LPAREN  shift, and go to state 29


state 14

   42 exp: PRINTNAT . LPAREN exp RPAREN

    LPAREN  shift, and go to state 30


state 15

   43 exp: READNAT . LPAREN RPAREN

    LPAREN  shift, and go to state 31


state 16

   41 exp: THIS .

    $default  reduce using rule 41 (exp)


state 17

   40 exp: NEW . ID LPAREN RPAREN

    ID  shift, and go to state 32


state 18

   51 exp: NUL .

    $default  reduce using rule 51 (exp)


state 19

   30 exp: NATLITERAL .

    $default  reduce using rule 30 (exp)


state 20

   12 field: ID . ID SEMICOLON
   44 exp: ID .
   46    | ID . ASSIGN exp
   48    | ID . LPAREN alist RPAREN

    ID      shift, and go to state 33
    ASSIGN  shift, and go to state 34
    LPAREN  shift, and go to state 35

    $default  reduce using rule 44 (exp)


state 21

   36 exp: NOT . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 37


state 22

   50 exp: LPAREN . exp RPAREN

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 38


state 23

    9 field: field . NATTYPE ID SEMICOLON
   10      | field . ID ID SEMICOLON
   23 vbexp: field . exp SEMICOLON

    NATTYPE     shift, and go to state 39
    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 40
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 41


state 24

   22 main: MAIN LBRACE vbexp . RBRACE
   24 vbexp: vbexp . exp SEMICOLON

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    RBRACE      shift, and go to state 42
    LPAREN      shift, and go to state 22

    exp  go to state 43


state 25

   25 vbexp: exp . SEMICOLON
   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    TIMES      shift, and go to state 46
    EQUALITY   shift, and go to state 47
    LESS       shift, and go to state 48
    AND        shift, and go to state 49
    DOT        shift, and go to state 50
    SEMICOLON  shift, and go to state 51


state 26

    3 class: class CLASS ID EXTENDS . ID clexp

    ID  shift, and go to state 52


state 27

   11 field: NATTYPE ID . SEMICOLON

    SEMICOLON  shift, and go to state 53


state 28

   38 exp: IF LPAREN . exp RPAREN LBRACE elist RBRACE ELSE LBRACE elist RBRACE

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 54


state 29

   39 exp: WHILE LPAREN . exp RPAREN LBRACE elist RBRACE

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 55


state 30

   42 exp: PRINTNAT LPAREN . exp RPAREN

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 56


state 31

   43 exp: READNAT LPAREN . RPAREN

    RPAREN  shift, and go to state 57


state 32

   40 exp: NEW ID . LPAREN RPAREN

    LPAREN  shift, and go to state 58


state 33

   12 field: ID ID . SEMICOLON

    SEMICOLON  shift, and go to state 59


state 34

   46 exp: ID ASSIGN . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 60


state 35

   48 exp: ID LPAREN . alist RPAREN

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    alist  go to state 61
    exp    go to state 62


state 36

   44 exp: ID .
   46    | ID . ASSIGN exp
   48    | ID . LPAREN alist RPAREN

    ASSIGN  shift, and go to state 34
    LPAREN  shift, and go to state 35

    $default  reduce using rule 44 (exp)


state 37

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   36    | NOT exp .
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50

    $default  reduce using rule 36 (exp)


state 38

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN
   50    | LPAREN exp . RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50
    RPAREN    shift, and go to state 63


state 39

    9 field: field NATTYPE . ID SEMICOLON

    ID  shift, and go to state 64


state 40

   10 field: field ID . ID SEMICOLON
   44 exp: ID .
   46    | ID . ASSIGN exp
   48    | ID . LPAREN alist RPAREN

    ID      shift, and go to state 65
    ASSIGN  shift, and go to state 34
    LPAREN  shift, and go to state 35

    $default  reduce using rule 44 (exp)


state 41

   23 vbexp: field exp . SEMICOLON
   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    TIMES      shift, and go to state 46
    EQUALITY   shift, and go to state 47
    LESS       shift, and go to state 48
    AND        shift, and go to state 49
    DOT        shift, and go to state 50
    SEMICOLON  shift, and go to state 66


state 42

   22 main: MAIN LBRACE vbexp RBRACE .

    $default  reduce using rule 22 (main)


state 43

   24 vbexp: vbexp exp . SEMICOLON
   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    TIMES      shift, and go to state 46
    EQUALITY   shift, and go to state 47
    LESS       shift, and go to state 48
    AND        shift, and go to state 49
    DOT        shift, and go to state 50
    SEMICOLON  shift, and go to state 67


state 44

   31 exp: exp PLUS . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 68


state 45

   32 exp: exp MINUS . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 69


state 46

   33 exp: exp TIMES . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 70


state 47

   34 exp: exp EQUALITY . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 71


state 48

   35 exp: exp LESS . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 72


state 49

   37 exp: exp AND . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 73


state 50

   45 exp: exp DOT . ID
   47    | exp DOT . ID ASSIGN exp
   49    | exp DOT . ID LPAREN alist RPAREN

    ID  shift, and go to state 74


state 51

   25 vbexp: exp SEMICOLON .

    $default  reduce using rule 25 (vbexp)


state 52

    3 class: class CLASS ID EXTENDS ID . clexp

    LBRACE  shift, and go to state 75

    clexp  go to state 76


state 53

   11 field: NATTYPE ID SEMICOLON .

    $default  reduce using rule 11 (field)


state 54

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   38    | IF LPAREN exp . RPAREN LBRACE elist RBRACE ELSE LBRACE elist RBRACE
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50
    RPAREN    shift, and go to state 77


state 55

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   39    | WHILE LPAREN exp . RPAREN LBRACE elist RBRACE
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50
    RPAREN    shift, and go to state 78


state 56

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   42    | PRINTNAT LPAREN exp . RPAREN
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50
    RPAREN    shift, and go to state 79


state 57

   43 exp: READNAT LPAREN RPAREN .

    $default  reduce using rule 43 (exp)


state 58

   40 exp: NEW ID LPAREN . RPAREN

    RPAREN  shift, and go to state 80


state 59

   12 field: ID ID SEMICOLON .

    $default  reduce using rule 12 (field)


state 60

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   46    | ID ASSIGN exp .
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50

    $default  reduce using rule 46 (exp)


state 61

   28 alist: alist . COMMA exp
   48 exp: ID LPAREN alist . RPAREN

    COMMA   shift, and go to state 81
    RPAREN  shift, and go to state 82


state 62

   29 alist: exp .
   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50

    $default  reduce using rule 29 (alist)


state 63

   50 exp: LPAREN exp RPAREN .

    $default  reduce using rule 50 (exp)


state 64

    9 field: field NATTYPE ID . SEMICOLON

    SEMICOLON  shift, and go to state 83


state 65

   10 field: field ID ID . SEMICOLON

    SEMICOLON  shift, and go to state 84


state 66

   23 vbexp: field exp SEMICOLON .

    $default  reduce using rule 23 (vbexp)


state 67

   24 vbexp: vbexp exp SEMICOLON .

    $default  reduce using rule 24 (vbexp)


state 68

   31 exp: exp . PLUS exp
   31    | exp PLUS exp .
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    $default  reduce using rule 31 (exp)


state 69

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   32    | exp MINUS exp .
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    $default  reduce using rule 32 (exp)


state 70

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   33    | exp TIMES exp .
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    $default  reduce using rule 33 (exp)


state 71

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   34    | exp EQUALITY exp .
   35    | exp . LESS exp
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    $default  reduce using rule 34 (exp)


state 72

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   35    | exp LESS exp .
   37    | exp . AND exp
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    PLUS      shift, and go to state 44
    MINUS     shift, and go to state 45
    TIMES     shift, and go to state 46
    EQUALITY  shift, and go to state 47
    LESS      shift, and go to state 48
    AND       shift, and go to state 49
    DOT       shift, and go to state 50

    $default  reduce using rule 35 (exp)


state 73

   31 exp: exp . PLUS exp
   32    | exp . MINUS exp
   33    | exp . TIMES exp
   34    | exp . EQUALITY exp
   35    | exp . LESS exp
   37    | exp . AND exp
   37    | exp AND exp .
   45    | exp . DOT ID
   47    | exp . DOT ID ASSIGN exp
   49    | exp . DOT ID LPAREN alist RPAREN

    $default  reduce using rule 37 (exp)


state 74

   45 exp: exp DOT ID .
   47    | exp DOT ID . ASSIGN exp
   49    | exp DOT ID . LPAREN alist RPAREN

    ASSIGN  shift, and go to state 85
    LPAREN  shift, and go to state 86

    $default  reduce using rule 45 (exp)


state 75

    5 clexp: LBRACE . field RBRACE
    6      | LBRACE . method RBRACE
    7      | LBRACE . field method RBRACE
    8      | LBRACE . RBRACE

    NATTYPE  shift, and go to state 87
    ID       shift, and go to state 88
    RBRACE   shift, and go to state 89

    field   go to state 90
    method  go to state 91


state 76

    3 class: class CLASS ID EXTENDS ID clexp .

    $default  reduce using rule 3 (class)


state 77

   38 exp: IF LPAREN exp RPAREN . LBRACE elist RBRACE ELSE LBRACE elist RBRACE

    LBRACE  shift, and go to state 92


state 78

   39 exp: WHILE LPAREN exp RPAREN . LBRACE elist RBRACE

    LBRACE  shift, and go to state 93


state 79

   42 exp: PRINTNAT LPAREN exp RPAREN .

    $default  reduce using rule 42 (exp)


state 80

   40 exp: NEW ID LPAREN RPAREN .

    $default  reduce using rule 40 (exp)


state 81

   28 alist: alist COMMA . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 94


state 82

   48 exp: ID LPAREN alist RPAREN .

    $default  reduce using rule 48 (exp)


state 83

    9 field: field NATTYPE ID SEMICOLON .

    $default  reduce using rule 9 (field)


state 84

   10 field: field ID ID SEMICOLON .

    $default  reduce using rule 10 (field)


state 85

   47 exp: exp DOT ID ASSIGN . exp

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    exp  go to state 95


state 86

   49 exp: exp DOT ID LPAREN . alist RPAREN

    IF          shift, and go to state 12
    WHILE       shift, and go to state 13
    PRINTNAT    shift, and go to state 14
    READNAT     shift, and go to state 15
    THIS        shift, and go to state 16
    NEW         shift, and go to state 17
    NUL         shift, and go to state 18
    NATLITERAL  shift, and go to state 19
    ID          shift, and go to state 36
    NOT         shift, and go to state 21
    LPAREN      shift, and go to state 22

    alist  go to state 96
    exp    go to state 62


state 87

   11 field: NATTYPE . ID SEMICOLON
   16 method: NATTYPE . ID LPAREN pexp RPAREN LBRACE vbexp RBRACE

    ID  shift, and go to state 97


state 88

   12 field: ID . ID SEMICOLON
   15 method: ID . ID LPAREN pexp RPAREN LBRACE vbexp RBRACE

    ID  shift, and go to state 98


state 89

    8 clexp: LBRACE RBRACE .

    $default  reduce using rule 8 (clexp)


state 90
